Send post and save token when clicking login button

--- a/src/app/users/components/login/login.component.html
+++ b/src/app/users/components/login/login.component.html
@@ -24,6 +24,6 @@
         </form>
     </mat-card-content>
     <mat-card-actions>
-        <button class="credential" mat-flat-button color="primary">Log in</button>
+        <button (click)="login()" class="credential" mat-flat-button color="primary">Log in</button>
     </mat-card-actions>
 </mat-card>
