--- a/src/app/users/components/login/login.component.html
+++ b/src/app/users/components/login/login.component.html
@@ -26,4 +26,7 @@
     <mat-card-actions>
         <button (click)="login()" class="credential" mat-flat-button color="primary">Log in</button>
     </mat-card-actions>
+    <div *ngIf="logged_in">
+        <button (click)="logout()" class="credential" mat-flat-button color="primary">Logout</button>
+    </div>
 </mat-card>
