--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,10 @@
         <mat-drawer #drawer mode="push">
             <mat-nav-list>
                 <mat-list-item>
-                    Button
+                    <a routerLink="/">Home</a>
+                </mat-list-item>
+                <mat-list-item>
+                    <a routerLink="/login">Login</a>
                 </mat-list-item>
             </mat-nav-list>
         </mat-drawer>
@@ -18,7 +21,7 @@
             </mat-toolbar>
         </header>
         <div id="content">
-            <app-login></app-login>
+            <router-outlet></router-outlet>
         </div>
         <footer>
             <mat-toolbar color="primary"></mat-toolbar>
