--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,33 +1,25 @@
 <main>
-    <mat-drawer-container autosize>
-        <mat-drawer #drawer (click)="drawer.toggle()" mode="push">
+    <mat-sidenav-container fullscreen>
+        <mat-sidenav #sidenav (click)="sidenav.toggle()" mode="push" [fixedInViewport]="true">
             <mat-nav-list>
-                <mat-list-item>
-                    <a routerLink="/">Home</a>
-                </mat-list-item>
-                <mat-list-item>
-                    <a routerLink="/login">Login</a>
-                </mat-list-item>
-                <mat-list-item>
-                    <a routerLink="/products">Products</a>
-                </mat-list-item>
+                <a mat-list-item routerLink="/login">Login</a>
+                <a mat-list-item routerLink="/">Home</a>
+                <a mat-list-item routerLink="/products">Products</a>
             </mat-nav-list>
-        </mat-drawer>
-      
-        <header>
+        </mat-sidenav>
+        <mat-sidenav-content>
             <mat-toolbar color="primary">
-                <button mat-icon-button aria-label="Menu icon" (click)="drawer.toggle()">
+                <button mat-icon-button aria-label="Menu icon" (click)="sidenav.toggle()">
                   <mat-icon>menu</mat-icon>
                 </button>
-                <span>Sellement</span>
-                <span class="example-spacer"></span>
+                <h1>Sellement</h1>
             </mat-toolbar>
-        </header>
-        <div id="content">
-            <router-outlet></router-outlet>
-        </div>
-        <footer>
-            <mat-toolbar color="primary"></mat-toolbar>
-        </footer>
-    </mat-drawer-container>
+            <div id="content">
+                <router-outlet></router-outlet>
+            </div>
+            <footer>
+                <mat-toolbar color="primary"></mat-toolbar>
+            </footer>
+        </mat-sidenav-content>
+    </mat-sidenav-container>
 </main>
