--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <main>
     <mat-sidenav-container fullscreen>
-        <mat-sidenav #sidenav (click)="sidenav.toggle()" mode="push" [fixedInViewport]="true">
+        <mat-sidenav #sidenav (click)="sidenav.toggle()" [mode]="mobileQuery.matches ? 'push' : 'side'"
+                     [fixedInViewport]="true" [opened]="!mobileQuery.matches">
             <mat-nav-list>
                 <a mat-list-item routerLink="/login">Login</a>
                 <a mat-list-item routerLink="/">Home</a>
@@ -8,12 +9,14 @@
             </mat-nav-list>
         </mat-sidenav>
         <mat-sidenav-content>
-            <mat-toolbar color="primary">
-                <button mat-icon-button aria-label="Menu icon" (click)="sidenav.toggle()">
-                  <mat-icon>menu</mat-icon>
-                </button>
-                <h1>Sellement</h1>
-            </mat-toolbar>
+            <header id="navbar">
+                <mat-toolbar color="primary">
+                    <button mat-icon-button aria-label="Menu icon" (click)="sidenav.toggle()">
+                        <mat-icon>menu</mat-icon>
+                    </button>
+                    <h1>Sellement</h1>
+                </mat-toolbar>
+            </header>
             <div id="content">
                 <router-outlet></router-outlet>
             </div>
