--- a/src/app/products/components/product-list/product-list.component.html
+++ b/src/app/products/components/product-list/product-list.component.html
@@ -1,1 +1,23 @@
-<p>product-list works!</p>
+<table mat-table [dataSource]="dataSource">
+    <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef>Name</th>
+        <td mat-cell *matCellDef="let element">{{element.name}}</td>
+    </ng-container>
+    <ng-container matColumnDef="stock">
+        <th mat-header-cell *matHeaderCellDef>Stock</th>
+        <td mat-cell *matCellDef="let element">{{element.stock}}</td>
+    </ng-container>
+    <ng-container matColumnDef="purchasePrice">
+        <th mat-header-cell *matHeaderCellDef>Purchase price</th>
+        <td mat-cell *matCellDef="let element">{{element.purchasePrice}}</td>
+    </ng-container>
+    <ng-container matColumnDef="sellPrice">
+        <th mat-header-cell *matHeaderCellDef>Sell price</th>
+        <td mat-cell *matCellDef="let element">{{element.sellPrice}}</td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
+<mat-paginator #paginator [pageSizeOptions]="[10]" aria-label="Select page">
+</mat-paginator>
