--- a/src/app/products/components/product-create/product-create.component.html
+++ b/src/app/products/components/product-create/product-create.component.html
@@ -1,1 +1,33 @@
-<p>product-create works!</p>
+<div class="form-content">
+    <form [formGroup]="productForm">
+        <mat-form-field class="form-field" appearance="outline">
+            <mat-label>Name</mat-label>
+            <input #name matInput maxlength="50" formControlName="name" required>
+            <mat-hint align="end">{{name.value?.length || 0}}/50</mat-hint>
+        </mat-form-field>
+        <br>
+        <mat-form-field class="form-field" appearance="outline">
+            <mat-label>Description</mat-label>
+            <textarea #description matInput rows="5" maxlength="300" formControlName="description" required></textarea>
+            <mat-hint align="end">{{description.value?.length || 0}}/300</mat-hint>
+        </mat-form-field>
+        <br>
+        <mat-form-field class="form-field" appearance="outline">
+            <mat-label>Stock</mat-label>
+            <input matInput type="number" placeholder="0" min="0" formControlName="stock" required>
+        </mat-form-field>
+        <br>
+        <mat-form-field class="form-field" appearance="outline">
+            <mat-label>Purchase price</mat-label>
+            <input matInput type="number" placeholder="0" min="0" formControlName="purchase_price" required>
+            <span matPrefix>₡&nbsp;</span>
+        </mat-form-field>
+        <br>
+        <mat-form-field class="form-field" appearance="outline">
+            <mat-label>Sell price</mat-label>
+            <input matInput type="number" placeholder="0" min="0" formControlName="sell_price" required>
+            <span matPrefix>₡&nbsp;</span>
+        </mat-form-field>
+    </form>
+    <button mat-flat-button (click)="submit()" class="form-field" color="primary">Create product</button>
+</div>
