Add ProductUpdate component
Some work is left:
- Create a getProduct resolver and handle errors
  regarding non-number or unexisting ids
- Integrate the resolver and refactor the current
  logic

--- a/src/app/products/components/product-form-common/product-form-common.component.html
+++ b/src/app/products/components/product-form-common/product-form-common.component.html
@@ -1,5 +1,6 @@
 <div class="form-content">
     <form [formGroup]="modelForm">
+        <input hidden formControlName="id" required>
         <mat-form-field class="form-field" appearance="outline">
             <mat-label>Name</mat-label>
             <input #name matInput maxlength="50" formControlName="name" required>
