Add product resolver to edit page
Errors are handle generically by hiding the form and
showing some information about the status of the error.
Future work involves adding some CSS to style better the
error messages. Generic classes were updated to handle
error situations.

--- a/src/app/products/components/product-form-common/product-form-common.component.html
+++ b/src/app/products/components/product-form-common/product-form-common.component.html
@@ -1,5 +1,5 @@
 <div class="form-content">
-    <form [formGroup]="modelForm">
+    <form *ngIf="fillableForm" [formGroup]="modelForm">
         <input hidden formControlName="id" required>
         <mat-form-field class="form-field" appearance="outline">
             <mat-label>Name</mat-label>
@@ -29,6 +29,7 @@
             <input matInput type="number" placeholder="0" min="0" formControlName="sell_price" required>
             <span matPrefix>₡&nbsp;</span>
         </mat-form-field>
+        <button mat-flat-button (click)="submit()" class="form-field" color="primary">{{submitText}}</button>
     </form>
-    <button mat-flat-button (click)="submit()" class="form-field" color="primary">{{submitText}}</button>
+    <div *ngIf="!fillableForm">{{notFillableMessage}}</div>
 </div>
