--- a/src/app/products/components/product-list/product-list.component.scss
+++ b/src/app/products/components/product-list/product-list.component.scss
@@ -1,8 +1,9 @@
-table {
-    width: 100%;
+.product {
+    border: 1px solid lightgray;
+    box-shadow: none;
+    margin-bottom: 3%;
 }
 
-.data-list {
-    width: 100%;
-    overflow-x: auto;
+.product > * {
+    word-break: break-all;
 }
