Add product details component
It is left to handle the update and delete buttons

--- a/src/app/products/components/product-list/product-list.component.scss
+++ b/src/app/products/components/product-list/product-list.component.scss
@@ -1,9 +1,6 @@
-.product {
-    border: 1px solid lightgray;
-    box-shadow: none;
-    margin-bottom: 3%;
-}
+@import '../../../../styles.scss';
 
-.product > * {
-    word-break: break-all;
+.product {
+    @extend .card-flat;
+    margin-bottom: 3%;
 }
