--- a/src/app/products/components/product-delete/product-delete.component.html
+++ b/src/app/products/components/product-delete/product-delete.component.html
@@ -1,8 +1,17 @@
 <div *ngIf="error">
     {{errorMessage}}
 </div>
-<div *ngIf="!error" >
-    <div fxLayout="row wrap" fxLayout.xs="column"  fxLayoutAlign="space-between stretch">
+<div *ngIf="!error">
+    <div fxLayout="row" fxLayoutAlign="left center">
+        <mat-icon class="main-icon">help</mat-icon>
+        <h1 class="main-text">
+            Are you sure you want to delete this product?
+        </h1>
+    </div>
+    <!-- TODO: Create general ModelDetailsComponent with this layout
+        that can be used across multiple models
+    -->
+    <mat-card-content>
         <div fxFlex="100%" fxLayout="row" fxLayout.xs="column" fxLayoutGap="3%">
             <mat-card class="card-flat" fxFlex="50%">
                 <h1>{{product.name}}</h1>
@@ -29,9 +38,9 @@
                 </div>
             </mat-card>
         </div>
-        <div class="actions" fxFlex="100%" fxLayout="row" fxLayout.xs="column" fxLayoutGap="3%">
-            <a fxFlex="50%" mat-flat-button routerLink="/products/update/{{product.id}}" color="primary">Update product</a>
-            <a fxFlex="50%" mat-flat-button routerLink="/products/delete/{{product.id}}" color="warn">Delete product</a>
-        </div>
+    </mat-card-content>
+    <div class="actions" fxLayout="row" fxLayout.xs="column" fxLayoutGap="3%">
+        <a fxFlex="50%" mat-flat-button color="primary" routerLink="/products/details/{{product.id}}">Cancel</a>
+        <button fxFlex="50%" mat-flat-button color="warn" (click)="delete()">Delete</button>
     </div>
 </div>
