--- a/src/app/products/components/product-form-common/product-form-common.component.html
+++ b/src/app/products/components/product-form-common/product-form-common.component.html
@@ -1,6 +1,6 @@
 <div class="form-content">
     <form *ngIf="fillableForm" [formGroup]="modelForm">
-        <input hidden formControlName="id" required>
+        <input hidden formControlName="id">
         <mat-form-field class="form-field" appearance="outline">
             <mat-label>Name</mat-label>
             <input #name matInput maxlength="50" formControlName="name" required>
