--- a/src/app/products/components/product-delete/product-delete.component.html
+++ b/src/app/products/components/product-delete/product-delete.component.html
@@ -8,39 +8,11 @@
             Are you sure you want to delete this product?
         </h1>
     </div>
-    <!-- TODO: Create general ModelDetailsComponent with this layout
-        that can be used across multiple models
-    -->
-    <mat-card-content>
-        <div fxFlex="100%" fxLayout="row" fxLayout.xs="column" fxLayoutGap="3%">
-            <mat-card class="card-flat" fxFlex="50%">
-                <h1>{{product.name}}</h1>
-                <div>{{product.description}}</div>
-            </mat-card>
-            <mat-card class="card-flat" fxFlex="50%" fxLayout="column">
-                 <div fxLayout="column">
-                    <div fxLayout="row">
-                        <div fxFlex="50">Stock </div>
-                        <div fxFlex="50">{{product.stock}}</div>
-                    </div>
-                    <div fxLayout="row">
-                        <div fxFlex="50">Purchase price </div>
-                        <div fxFlex="50">{{product.purchasePrice}}</div>
-                    </div>
-                    <div fxLayout="row">
-                        <div fxFlex="50">Sell price </div>
-                        <div fxFlex="50">{{product.sellPrice}}</div>
-                    </div>
-                    <div fxLayout="row">
-                        <div fxFlex="50">Last modified </div>
-                        <div fxFlex="50">{{product.lastModified}}</div>
-                    </div>
-                </div>
-            </mat-card>
+    <div fxLayout="row wrap" fxLayout.xs="column"  fxLayoutAlign="space-between stretch">
+        <app-model-details fxFlex="100%" fxLayout="row" fxLayout.xs="column" fxLayoutGap="3%" [dataSource]="product"></app-model-details>
+        <div class="actions" fxFlex="100%" fxLayout="row" fxLayout.xs="column" fxLayoutGap="3%">
+            <a fxFlex="50%" mat-flat-button color="primary" routerLink="/products/details/{{product.id}}">Cancel</a>
+            <a fxFlex="50%" mat-flat-button color="warn" (click)="delete()">Delete</a>
         </div>
-    </mat-card-content>
-    <div class="actions" fxLayout="row" fxLayout.xs="column" fxLayoutGap="3%">
-        <a fxFlex="50%" mat-flat-button color="primary" routerLink="/products/details/{{product.id}}">Cancel</a>
-        <button fxFlex="50%" mat-flat-button color="warn" (click)="delete()">Delete</button>
     </div>
 </div>
