Fix delete button not working
After adding the ActionableDetailedModel component, there
was an issue firing TypeScript methods associated in the
HTML

To address this, the ViewCallback interface was created so
that the components can implement it and being called as such
to remove the need of passing "function pointers" that may
have issues

--- a/src/app/core/components/actionable-detailed-model/actionable-detailed-model.component.html
+++ b/src/app/core/components/actionable-detailed-model/actionable-detailed-model.component.html
@@ -13,10 +13,10 @@
         <app-model-details fxFlex="100%" fxLayout="row" fxLayout.xs="column" fxLayoutGap="3%" [dataSource]="model"></app-model-details>
         <div class="actions" fxFlex="100%" fxLayout="row" fxLayout.xs="column" fxLayoutGap="3%">
             <ng-container *ngFor="let button of buttons">
-                <ng-container *ngIf="button.clickCallback != undefined; else linkButton">
+                <ng-container *ngIf="button.viewCallback != undefined; else linkButton">
                     <a fxFlex="50%" mat-flat-button
                         color="{{button.color}}" [disabled]="button.disabled"
-                        (click)="button.clickCallback()">
+                        (click)="button.viewCallback.runCallback(button.viewCallbackMethod)">
                         {{button.displayText}}
                     </a>
                 </ng-container>
