--- a/src/app/core/components/actionable-detailed-model/actionable-detailed-model.component.html
+++ b/src/app/core/components/actionable-detailed-model/actionable-detailed-model.component.html
@@ -11,23 +11,6 @@
     <!-- TODO: Make the layout configurable with parameters -->
     <div fxLayout="row wrap" fxLayout.xs="column"  fxLayoutAlign="space-between stretch">
         <app-model-details fxFlex="100%" fxLayout="row" fxLayout.xs="column" fxLayoutGap="3%" [dataSource]="model"></app-model-details>
-        <div class="actions" fxFlex="100%" fxLayout="row" fxLayout.xs="column" fxLayoutGap="3%">
-            <ng-container *ngFor="let button of buttons">
-                <ng-container *ngIf="button.viewCallback != undefined; else linkButton">
-                    <a fxFlex="50%" mat-flat-button
-                        color="{{button.color}}" [disabled]="button.disabled"
-                        (click)="button.viewCallback.runCallback(button.viewCallbackMethod)">
-                        {{button.displayText}}
-                    </a>
-                </ng-container>
-                <ng-template #linkButton>
-                    <a fxFlex="50%" mat-flat-button
-                        color="{{button.color}}" [disabled]="button.disabled"
-                        routerLink="{{button.routerLink}}">
-                        {{button.displayText}}
-                    </a>
-                </ng-template>
-            </ng-container>
-        </div>
+        <app-button-array class="actions" fxFlex="100%" fxLayout="row" fxLayout.xs="column" fxLayoutGap="3%" [buttons]="buttons"></app-button-array>
     </div>
 </div>
