--- a/src/app/core/components/button-array/button-array.component.html
+++ b/src/app/core/components/button-array/button-array.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngFor="let button of buttons">
-    <ng-container *ngIf="button.viewCallback != undefined; else linkButton">
+    <ng-container *ngIf="button.viewCallback !== undefined; else linkButton">
         <a fxFlex="50%" mat-flat-button
             color="{{button.color}}" [disabled]="button.disabled"
             (click)="button.viewCallback.runCallback(button.viewCallbackMethod)">
