--- a/src/app/core/components/form-fields/textarea-field/textarea-field.component.html
+++ b/src/app/core/components/form-fields/textarea-field/textarea-field.component.html
@@ -1,4 +1,4 @@
-<mat-form-field class="form-field" appearance="outline" [formGroup]="form">
+<mat-form-field fxFlexFill class="form-field" appearance="outline" [formGroup]="form">
     <mat-label for="field.name">{{field.label}}</mat-label>
     <textarea matInput [formControlName]="field.name" [id]="field.name" [type]="field.type" [maxlength]="field.maxLength" [rows]="field.rows"></textarea>
     <mat-hint align="end">{{form.controls[this.field.name].value?.length || 0}}/{{field.maxLength}}</mat-hint>
