--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,28 +1,35 @@
-<main>
-    <mat-sidenav-container fullscreen>
-        <mat-sidenav #sidenav (click)="sidenav.toggle()" [mode]="mobileQuery.matches ? 'push' : 'side'"
-                     [fixedInViewport]="true" [opened]="!mobileQuery.matches">
-            <mat-nav-list>
-                <a mat-list-item routerLink="/login">Login</a>
-                <a mat-list-item routerLink="/">Home</a>
-                <a mat-list-item routerLink="/products">Products</a>
-            </mat-nav-list>
-        </mat-sidenav>
-        <mat-sidenav-content>
-            <header id="navbar">
-                <mat-toolbar color="primary">
-                    <button mat-icon-button aria-label="Menu icon" (click)="sidenav.toggle()">
-                        <mat-icon>menu</mat-icon>
-                    </button>
-                    <h1>Sellement</h1>
-                </mat-toolbar>
-            </header>
-            <div id="content">
-                <router-outlet></router-outlet>
-            </div>
-            <footer>
-                <mat-toolbar color="primary"></mat-toolbar>
-            </footer>
-        </mat-sidenav-content>
-    </mat-sidenav-container>
-</main>
+<mat-sidenav-container>
+    <mat-sidenav #sidenav (click)="sidenav.toggle()" [mode]="mobileQuery.matches ? 'push' : 'side'"
+                    [fixedInViewport]="true" [opened]="!mobileQuery.matches">
+        <mat-nav-list>
+            <a mat-list-item routerLink="/login">
+                <mat-icon mat-list-icon>account_circle</mat-icon>
+                Login
+            </a>
+            <a mat-list-item routerLink="/">
+                <mat-icon mat-list-icon>home</mat-icon>
+                Home
+            </a>
+            <a mat-list-item routerLink="/products">
+                <mat-icon mat-list-icon>list</mat-icon>
+                Products
+            </a>
+        </mat-nav-list>
+    </mat-sidenav>
+    <mat-sidenav-content>
+        <header id="navbar">
+            <mat-toolbar color="primary">
+                <button mat-icon-button aria-label="Menu icon" (click)="sidenav.toggle()">
+                    <mat-icon>menu</mat-icon>
+                </button>
+                <h1>Sellement</h1>
+            </mat-toolbar>
+        </header>
+        <main id="content">
+            <router-outlet></router-outlet>
+        </main>
+        <footer>
+            <mat-toolbar color="primary"></mat-toolbar>
+        </footer>
+    </mat-sidenav-content>
+</mat-sidenav-container>
