--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,18 +2,22 @@
     <mat-sidenav #sidenav (click)="sidenav.toggle()" [mode]="mobileQuery.matches ? 'push' : 'side'"
                     [fixedInViewport]="true" [opened]="!mobileQuery.matches">
         <mat-nav-list>
-            <a mat-list-item routerLink="/login">
-                <mat-icon mat-list-icon>account_circle</mat-icon>
-                Login
-            </a>
-            <a mat-list-item routerLink="/">
-                <mat-icon mat-list-icon>home</mat-icon>
-                Home
-            </a>
-            <a mat-list-item routerLink="/products">
-                <mat-icon mat-list-icon>list</mat-icon>
-                Products
-            </a>
+            <ng-container *ngIf="!authenticated; else authMenu">
+                <a mat-list-item routerLink="/login">
+                    <mat-icon mat-list-icon>account_circle</mat-icon>
+                    Login
+                </a>
+            </ng-container>
+            <ng-template #authMenu>
+                <a mat-list-item routerLink="/">
+                    <mat-icon mat-list-icon>home</mat-icon>
+                    Home
+                </a>
+                <a mat-list-item routerLink="/products">
+                    <mat-icon mat-list-icon>list</mat-icon>
+                    Products
+                </a>
+            </ng-template>
         </mat-nav-list>
     </mat-sidenav>
     <mat-sidenav-content>
@@ -22,7 +26,7 @@
                 <button mat-icon-button aria-label="Menu icon" (click)="sidenav.toggle()">
                     <mat-icon>menu</mat-icon>
                 </button>
-                <h1>Sellement</h1>
+                <h1>{{title}}</h1>
             </mat-toolbar>
         </header>
         <main id="content">
