Add categories list view
Created necessary components, models and services to display categories
in the frontend. CRUD operations are pending.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,6 +17,10 @@
                     <mat-icon mat-list-icon>list</mat-icon>
                     Products
                 </a>
+                <a mat-list-item routerLink="/categories">
+                    <mat-icon mat-list-icon>list</mat-icon>
+                    Categories
+                </a>
             </ng-template>
         </mat-nav-list>
     </mat-sidenav>
