Fix spinner location and content when loading
Centered the spinner and hide the paginator if the content has not been
loaded yet

--- a/src/app/categories/components/category-list/category-list.component.html
+++ b/src/app/categories/components/category-list/category-list.component.html
@@ -1,22 +1,26 @@
-<mat-spinner *ngIf="loading"></mat-spinner>
-
-<div fxLayout="row wrap"
-     fxLayout.xs="column wrap"
-     fxLayoutAlign="start none"
-     fxLayoutGap="1rem">
-    <mat-card *ngFor="let category of dataContainer.results"
-              class="model-card"
-              fxFlex="30%" >
-        <mat-card-title>{{category.name}}</mat-card-title>
-        <!-- TODO: Add action buttons -->
-    </mat-card>
+<div fxLayout="row" fxLayoutAlign="center center">
+    <mat-spinner *ngIf="loading"></mat-spinner>
 </div>
 
-<mat-paginator #paginator
-               class="model-card"
-               [length]="dataContainer.count" 
-               [pageIndex]="dataContainer.currentPage"
-               [pageSizeOptions]="[10]"
-               (page)="pageChanged($event)" 
-               aria-label="Select page">
-</mat-paginator>
+<ng-container *ngIf="!loading">
+    <div fxLayout="row wrap"
+         fxLayout.xs="column wrap"
+         fxLayoutAlign="start none"
+         fxLayoutGap="1rem">
+        <mat-card *ngFor="let category of dataContainer.results"
+                  class="model-card"
+                  fxFlex="30%" >
+            <mat-card-title>{{category.name}}</mat-card-title>
+            <!-- TODO: Add action buttons -->
+        </mat-card>
+    </div>
+    
+    <mat-paginator #paginator
+                   class="model-card"
+                   [length]="dataContainer.count" 
+                   [pageIndex]="dataContainer.currentPage"
+                   [pageSizeOptions]="[10]"
+                   (page)="pageChanged($event)" 
+                   aria-label="Select page">
+    </mat-paginator>
+</ng-container>
